--- a/modules/quality_control/tryton.cfg
+++ b/modules/quality_control/tryton.cfg
@@ -6,6 +6,10 @@ depends:
     stock
     party
     production
+    production_routing
+    production_work
 xml:
     qualitycontrol.xml
     production.xml
+    routing.xml
+    work.xml
