--- a/trytond.conf
+++ b/trytond.conf
@@ -1,8 +1,13 @@
 [web]
 listen=0.0.0.0:8000
 root=/var/lib/trytond/www
+cors = 
+    http://localhost:4200
 
 
 [email]
 uri = smtp://1fb05f29adeba8:07ece5179e7a54@smtp.mailtrap.io:2525
 from = "My NAME :D" saif@test.com
+
+
+
